adding the rails level